// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.

syntax = "proto3";

package foundation.framework.secrets.localsecrets;

option go_package = "namespacelabs.dev/foundation/framework/secrets/localsecrets";

message Manifest {
    repeated Definition      definition = 1;
    repeated BundleReference values     = 2;
    repeated Reader          reader     = 3;  // Set of identities that have access to the encrypted values.

    // Definitions are not encrypted, so anyone can list the contents of the bundle,
    // but not their values.
    message Definition {
        ValueKey key = 1;
    }

    message BundleReference {
        string filename = 1;  // Absolute location within the bundle.
        bool   raw_text = 2;  // If true, the bundle is unencrypted. Use exclusively for testing.
    }

    message Reader {
        string public_key  = 1;
        string description = 2;
    }
}

// Contents of manifest.json found inside of an encrypted bundle.
message ValueDatabase {
    repeated Value value = 1;

    message Value {
        ValueKey key       = 1;
        string   from_path = 2;  // If specified, value is the contents of the filename, absolute path within the encrypted bundle
        bytes    value     = 3;  // Inline secret value.
    }
}

message ValueKey {
    string package_name     = 1;
    string key              = 2;
    string environment_name = 3;
}