// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.

syntax = "proto3";

package foundation.schema;

import "schema/package.proto";

option go_package = "namespacelabs.dev/foundation/schema";

message Resolvable {
    string                      value                                  = 1;
    string                      experimental_from_secret               = 2;  // Kubernetes specific.
    string                      experimental_from_downwards_field_path = 3;  // Kubernetes specific.
    PackageRef                  from_secret_ref                        = 4;
    ServiceRef                  from_service_endpoint                  = 5;  // Inject the endpoint of a service in the stack.
    ServiceRef                  from_service_ingress                   = 6;  // Inject the ingress address of a service. This is available from outside the cluster.
    ResourceConfigFieldSelector from_resource_field                    = 7;
    FieldSelector               from_field_selector                    = 8;
}

message NamedResolvable {
    string name = 1;
    Resolvable value = 2;
}

message FieldSelector {
    Instance instance = 1;
    string field_selector = 2;

    message Instance {
        ServiceRef service = 1;
        string select_internal_endpoint_by_kind = 2;
    }
}

message ResourceConfigFieldSelector {
    foundation.schema.PackageRef resource       = 1;
    string                       field_selector = 2;
}